# MRBEN_TRADING_BOT

./: .gitignore  .pre-commit-config.yaml  ADVANCED_SYSTEM_DOCUMENTATION.md  AI_AGENT_IMPLEMENTATION_SUMMARY.md  AI_AGENT_README.md  AI_ARCHITECTURE_IMPLEMENTATION_REPORT.md  AUDIT_SUMMARY.md  BUY_SELL_ANALYSIS_REPORT.md  COMPREHENSIVE_FIX_REPORT.md  CRITICAL_FIXES_IMPLEMENTED.md  CURRENT_CHECK.md  CURRENT_STATE.md  ENCODING_FIX_GUIDE.md  ENHANCED_SYSTEM_IMPLEMENTATION_REPORT.md  ENHANCED_SYSTEM_README.md  FINAL_COMPREHENSIVE_SOLUTION.md  FINAL_FIX_SUMMARY.md  FINAL_IMPROVEMENT_REPORT.md  FINAL_INSTRUCTIONS.md  FINAL_KEYBOARD_SOLUTION.md  FINAL_SOLUTION_GUIDE.md  FINAL_SUMMARY.md  FINAL_SYSTEM_STATUS_REPORT.md  GO_LIVE_CHECKLIST.md  KEYBOARD_EMERGENCY_FIX.md  KEYBOARD_FIX_GUIDE.md  LIVE_TRADER_CLEAN_README.md  LIVE_TRADER_UPDATES_SUMMARY.md  LSTM_BIAS_ANALYSIS_REPORT.md  MANUAL_KEYBOARD_FIX.md  MODULAR_ARCHITECTURE.md  Makefile  PHASE1_MANUAL_REPORT.ps1  PHASE1_REPORT.txt  PRO_ACTIVATION_QUICK_REFERENCE.md  PR_DESCRIPTION.md  PYRIGHT_IMPORT_FIX_SUMMARY.md  Procfile  QUICK_START_GUIDE.md  README.md  (+316 more)
advanced_strategy/: __init__.py  quantitative_strategy.py
backtests/: adausd_backtest.py  backtest.py  build_ml_training_dataset_backtest.py  build_ml_training_dataset_from_backtest.py  optimize_parameters.py  optimize_sl_tp_risk.py  simple_backtest.py  train_adausd_lstm_pro.py  train_adausd_xgb_filter.py  train_ai_model.py  train_ai_signal_filter.py  train_dqn_model.py  train_lstm.py  train_lstm_balanced.py  train_lstm_model.py  train_lstm_model_pro.py  train_ml_filter.py  train_ml_model.py  train_ml_xgboost.py  train_narx_multistep.py  train_rl_from_log.py
config/: config.yaml  credentials.example.env  default.yaml  pro_config.json  settings.json
dashboards/: dashboard.py  mrben_dashboard.py  mrben_dashboard_web.py
data/: events.jsonl  mfe_stream.jsonl  mfe_tick_data.jsonl  real_market_labels.npy  signals.db  trades.db
docs/: PHASE_2_3_SUMMARY.md  README.md  RUN_LIVE.md  cursor-report.md  test-system.py
examples/: book_strategy_backtest.py  book_strategy_example.py  generate_mock_data.py
logger/: __init__.py  trade_logger.py
ml/: enhanced_retrainer.py  retrainer.py  trade_log_retrainer.py
models/: advanced_lstm_model.h5  advanced_lstm_scaler.save  conformal.json  feature_scaler_20250820_172124.joblib  final_enhancement_report.txt  lstm_balanced_fixed.h5  lstm_balanced_fixed_scaler.joblib  lstm_balanced_model.h5  lstm_balanced_scaler.save  lstm_best_model.h5  lstm_final_fixed.h5  lstm_final_fixed_label_encoder.joblib  lstm_final_fixed_scaler.joblib  lstm_final_model.h5  lstm_scaler.save  lstm_simple_fixed.h5  lstm_trading_model.h5  lstm_trading_model_pro.h5  lstm_training_report.txt  meta_filter.joblib  ml_filter_training_report.txt  ml_signal_filter_xgb.joblib  mrben_ai_signal_filter_xgb.joblib  mrben_ai_signal_filter_xgb_balanced.joblib  mrben_ai_signal_filter_xgb_balanced_features.txt  mrben_ai_signal_filter_xgb_balanced_scaler.joblib  mrben_lstm_balanced_new.h5  mrben_lstm_balanced_v2.h5  mrben_lstm_balanced_v2_temp.h5  mrben_lstm_model.h5  mrben_lstm_real_data.h5  mrben_lstm_real_data_best.h5  mrben_lstm_real_data_scaler.save  mrben_lstm_scaler.pkl  mrben_lstm_scaler.save  mrben_lstm_scaler_balanced.save  mrben_lstm_scaler_v2.save  mrben_ml_filter_final_enhanced.joblib  mrben_ml_filter_updated.joblib  mrben_rl_model.pth  (+6 more)
mrben/: README.md  TODO.md  (+45 more)
(+275 files in other folders)
